--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
